add get member borrow